{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 201,
  "lineage": "28aba6bc-167c-1dc4-751a-dfc0d3735afb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_and_web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0588935a949f9ff17",
            "arn": "arn:aws:ec2:us-east-1:536416238943:instance/i-03e6f7117e18c261e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bluewave-instance-profile-dev",
            "id": "i-03e6f7117e18c261e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "r6a.large",
            "ipv6_address_count": 0,
            "key_name": "bluewave-kp-dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e71fab84d6291247",
            "private_dns": "ip-10-0-1-246.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.246",
            "public_ip": "54.235.21.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-045739ebfc20434ad",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0249c4ccf906f1678",
            "tags": {
              "Name": "bluewave-app-and-web-server-dev"
            },
            "tags_all": {
              "Name": "bluewave-app-and-web-server-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01f86f6c22b0e7b90"
            ]
          },
          "dependencies": [
            "aws_ecr_repository.bluewave_app",
            "aws_iam_instance_profile.ec2_ecr_instance_profile",
            "aws_iam_role.ec2_ecr_role",
            "aws_key_pair.deployer",
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet",
            "aws_vpc.main",
            "data.aws_ami.app_and_web_server",
            "data.http.my_ip",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536416238943:internet-gateway/igw-0cf3ddd70fa4b19fb",
            "id": "igw-0cf3ddd70fa4b19fb",
            "owner_id": "536416238943",
            "vpc_id": "vpc-019f872a432738057"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536416238943:route-table/rtb-06d0e6bab845ebef8",
            "id": "rtb-06d0e6bab845ebef8",
            "owner_id": "536416238943",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cf3ddd70fa4b19fb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bluewave-rt-dev"
            },
            "tags_all": {
              "Name": "bluewave-rt-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-019f872a432738057"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014811a63a1fa49bc",
            "route_table_id": "rtb-06d0e6bab845ebef8",
            "subnet_id": "subnet-0249c4ccf906f1678"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.main",
            "aws_subnet.subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536416238943:security-group/sg-01f86f6c22b0e7b90",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f86f6c22b0e7b90",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "76.31.247.14/32"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "terraform-20231118200609253200000006",
            "name_prefix": "terraform-",
            "owner_id": "536416238943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bluewave-sg-dev"
            },
            "tags_all": {
              "Name": "bluewave-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-019f872a432738057"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536416238943:subnet/subnet-0249c4ccf906f1678",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0249c4ccf906f1678",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "536416238943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bluewave-subnet-dev"
            },
            "tags_all": {
              "Name": "bluewave-subnet-dev"
            },
            "vpc_id": "vpc-019f872a432738057"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536416238943:vpc/vpc-019f872a432738057",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe408cc101d62edd",
            "default_route_table_id": "rtb-0e5f61512b2cd46fd",
            "default_security_group_id": "sg-07ea30ff7b79c260e",
            "dhcp_options_id": "dopt-03d17cb26a9228370",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-019f872a432738057",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e5f61512b2cd46fd",
            "owner_id": "536416238943",
            "tags": {
              "Name": "bluewave-vpc-dev"
            },
            "tags_all": {
              "Name": "bluewave-vpc-dev"
            }
          }
        }
      ]
    }
  ]
}